{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 59,
  "lineage": "cd1027fa-96ea-3663-fc40-99937c91963e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f58b397bc5c1f2e8",
            "arn": "arn:aws:ec2:ap-south-1:237206024543:instance/i-04c318e86d1c2ec75",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "devops-masters-ec2-profile",
            "id": "i-04c318e86d1c2ec75",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-000ae37eb4a334128",
            "private_dns": "ip-172-31-13-68.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.13.68",
            "public_dns": "ec2-15-206-179-26.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.179.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03f9ca62723cef6bf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "devops-masters-app-20250724120255262200000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09a77d5d24863c1f9",
            "tags": {
              "Environment": "production",
              "Name": "devops-masters-app-server"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-masters-app-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0da4e7682321b1377"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.app_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:237206024543:internet-gateway/igw-0b04b16320ee559e8",
            "id": "igw-0b04b16320ee559e8",
            "owner_id": "237206024543",
            "tags": {
              "Name": "devops-masters-igw"
            },
            "tags_all": {
              "Name": "devops-masters-igw"
            },
            "vpc_id": "vpc-023a0ed4b7e978095"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:237206024543:route-table/rtb-03fbf01a9c8d55224",
            "id": "rtb-03fbf01a9c8d55224",
            "owner_id": "237206024543",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b04b16320ee559e8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-masters-rt"
            },
            "tags_all": {
              "Name": "devops-masters-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-023a0ed4b7e978095"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0197dea6b3b526351",
            "route_table_id": "rtb-03fbf01a9c8d55224",
            "subnet_id": "subnet-02b66b42fd980ea1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_route_table.eks_rt",
            "aws_subnet.eks_subnet_1",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f72a520e3c2efd0",
            "route_table_id": "rtb-03fbf01a9c8d55224",
            "subnet_id": "subnet-0af318de2d3d516eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_route_table.eks_rt",
            "aws_subnet.eks_subnet_2",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:237206024543:security-group/sg-0da4e7682321b1377",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da4e7682321b1377",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devops-masters-app-20250724120255262200000001",
            "name_prefix": "devops-masters-app-",
            "owner_id": "237206024543",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-masters-app-sg"
            },
            "tags_all": {
              "Name": "devops-masters-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9dbce2ea7089119"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:237206024543:subnet/subnet-02b66b42fd980ea1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b66b42fd980ea1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "237206024543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-masters-subnet-1",
              "kubernetes.io/cluster/devops-masters-cluster": "owned"
            },
            "tags_all": {
              "Name": "devops-masters-subnet-1",
              "kubernetes.io/cluster/devops-masters-cluster": "owned"
            },
            "vpc_id": "vpc-023a0ed4b7e978095"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:237206024543:subnet/subnet-0af318de2d3d516eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af318de2d3d516eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "237206024543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-masters-subnet-2",
              "kubernetes.io/cluster/devops-masters-cluster": "owned"
            },
            "tags_all": {
              "Name": "devops-masters-subnet-2",
              "kubernetes.io/cluster/devops-masters-cluster": "owned"
            },
            "vpc_id": "vpc-023a0ed4b7e978095"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:237206024543:vpc/vpc-023a0ed4b7e978095",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07cdfbb926e47024f",
            "default_route_table_id": "rtb-0094152627c188a94",
            "default_security_group_id": "sg-0bdeada4088aae993",
            "dhcp_options_id": "dopt-0621f1b5d43295804",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-023a0ed4b7e978095",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0094152627c188a94",
            "owner_id": "237206024543",
            "tags": {
              "Name": "devops-masters-vpc"
            },
            "tags_all": {
              "Name": "devops-masters-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}